--- a/css/app.css
+++ b/css/app.css
@@ -53,7 +53,11 @@ html {
   font-size: 22px;
   line-height: 1em;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  background-color: #eee;
+  background: none;
+}
+
+.add-button.emoji-button {
+  background: #eee;
 }
 
 .list {
